# pylibczirw

./: .bandit.yml  .editorconfig  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .mega-linter.yml  .mypy.ini  .pylintrc  API.md  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  CONTRIBUTING.md  CPPLINT.cfg  DISCUSSIONS.md  INFO.md  MANIFEST.in  NOTICE.txt  README.md  TROUBLESHOOTING.md  [Doc] High level API.ipynb  [Doc] Low level binding.ipynb  bandit.yaml  pyproject.toml  python-semantic-release.json  requirements_deploy.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini  tox_cibuildwheel.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  codecov.yml  dependabot.yml
.github/actions/steps_download/: action.yml
.github/actions/steps_package/: action.yml
.github/actions/steps_psr/: action.yml
.github/workflows/: build-reusable.yml  build.yml  codeql.yml  mega-linter.yml  pages.yml  pr.yml  reuse.yml
.reuse/: dep5
_pylibCZIrw/src/: pylibCZIrw_Config.h.in
_pylibCZIrw/src/api/: CMakeLists.txt  CZIreadAPI.cpp  CZIreadAPI.h  CZIwriteAPI.cpp  CZIwriteAPI.h  PImage.cpp  PImage.h  StaticContext.cpp  StaticContext.h  SubBlockCache.h  inc_libCzi.h  site.cpp  site.h
_pylibCZIrw/src/bindings/: CMakeLists.txt  CZIrw.cpp  PbHelper.cpp  PbHelper.h  include_python.h
_pylibCZIrw/tests/: CMakeLists.txt  main.cpp
doc/jupyter_notebooks/: pylibCZIrw_4_1_0.ipynb
hooks/: pre-commit
pylibCZIrw/: __init__.py  czi.py
pylibCZIrw/tests/: __init__.py
pylibCZIrw/tests/integration/: __init__.py
pylibCZIrw/tests/integration/metadata/: __init__.py  test_metadata.py  test_metadata_uri.py
pylibCZIrw/tests/integration/metadata/test_data/: c1_bgr24_metadata.txt  c1_bgr24_t1_z1_h1_metadata.txt  c1_gray8_t1_z1_h1_s2_overlapping_subblocks_accross_scenes.czi  c1_gray8_t1_z1_h1_s2_overlapping_subblocks_accross_scenes_metadata.txt  c2_gray8_gray16_t1_z1_h1_metadata.txt  c2_gray8_t3_z5_h1_s2_metadata.txt  test_additional_metadata.czi  test_additional_metadata_metadata.txt
pylibCZIrw/tests/integration/read/: __init__.py  test_read.py
pylibCZIrw/tests/integration/test_data/: c1_bgr24.czi  c1_bgr24_plane.npz  c1_bgr48_plane.npz  c1_bgr96float.czi  c1_gray16.czi  c1_gray16_plane_Gray8.npz  c1_gray32float.czi  c1_gray8.czi  c1_gray8_plane_zoom07.npz  c1_gray8_s2_non_overlapping_bounding_boxes.czi  c1_gray8_s2_non_overlapping_bounding_boxes_plane_s0_zoom05.npz  c1_gray8_s2_non_overlapping_bounding_boxes_plane_s1.npz  c1_gray8_s2_overlapping_bounding_boxes_plane.npz  c1_gray8_s2_overlapping_bounding_boxes_plane_s1_zoom05_Bgr24.npz  c2_gray8_gray16_plane_c0_zoom05_Gray16.npz  c2_gray8_gray16_plane_c1.npz  c2_gray8_t3_z5_s2_plane_c0_z3_t2.npz  c2_gray8_t3_z5_s2_plane_s1_c0_z4_t1.npz  rgb-image.czi  rgb-image.npy
pylibCZIrw/tests/integration/write/: __init__.py  test_write.py
pylibCZIrw/tests/unit/: __init__.py  test_czi_reader.py  test_czi_writer.py
templates/: CHANGELOG.md.j2
test_data/: c1_bgr24.czi  c1_bgr48.czi  c1_gray8_s2_overlapping_bounding_boxes.czi  c2_gray8_gray16.czi  c2_gray8_t3_z5.czi  c2_gray8_t3_z5_s2.czi
